# bwkam.github.io

./: .gitignore  CNAME  Cargo.toml  README.md  atom.xml  build.rs  config.toml  flake.nix  index.html  package-lock.json  package.json  robots.txt  search_index.en.js  sitemap.xml  tailwind.config.js
.github/workflows/: deploy.yaml
art/: index.html
assets/: index.html
assets/css/: global.css  output.css
blog/: index.html
blog/figlang/: index.html
blog/first/: index.html
blog/haskell-bs/: index.html
blog/life/: index.html
content/art/: Main.js  _index.md  waves.html
content/blog/: figlang.md  first.md  haskell_bs.md  life.md
public/: index.html  robots.txt  search_index.en.js  sitemap.xml
public/blog/: index.html
public/blog/first/: index.html
public/styles/: main.css
src/: error.rs  input.css  main.rs  page.rs
src-styles/: base.css  md.css
src/routes/: about.rs  index.rs  mod.rs
static/styles/: main.css
templates/: art.html  base.html  blog-page.html  blog.html  index.html
